Refactor 'Person' entity references to 'User'
Renamed files, classes, tests, and templates to replace 'Person' with 'User' for better consistency and clarity. Updated DAO interactions, controller endpoints, and HTML templates accordingly.

--- a/java-docs/index-files/index-1.html
+++ b/java-docs/index-files/index-1.html
@@ -76,7 +76,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html#addPerson(com.library.library_management.data.entities.Person)" class="member-name-link">addPerson(Person)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PersonController</a></dt>
 <dd>
-<div class="block">Handles HTTP POST requests to add a new person.</div>
+<div class="block">Handles HTTP POST requests to add a new user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PublisherController.html#addPublisher(com.library.library_management.data.entities.Publisher)" class="member-name-link">addPublisher(Publisher)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PublisherController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PublisherController</a></dt>
 <dd>
