--- a/java-docs/index-files/index-11.html
+++ b/java-docs/index-files/index-11.html
@@ -58,7 +58,7 @@ loadScripts(document, 'script');</script>
 <dl class="index">
 <dt><a href="../com/library/library_management/data/entities/Person.html" class="type-name-link" title="class in com.library.library_management.data.entities">Person</a> - Class in <a href="../com/library/library_management/data/entities/package-summary.html">com.library.library_management.data.entities</a></dt>
 <dd>
-<div class="block">Entity class representing a person in the library management system.</div>
+<div class="block">Entity class representing a user in the library management system.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#%3Cinit%3E()" class="member-name-link">Person()</a> - Constructor for class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
@@ -70,7 +70,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html" class="type-name-link" title="class in com.library.library_management.data.presentation.controllers.admin">PersonController</a> - Class in <a href="../com/library/library_management/data/presentation/controllers/admin/package-summary.html">com.library.library_management.data.presentation.controllers.admin</a></dt>
 <dd>
-<div class="block">Controller class for managing persons (e.g., library members or staff) in the library management system.</div>
+<div class="block">Controller class for managing users (e.g., library members or staff) in the library management system.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html#%3Cinit%3E(com.library.library_management.data.dao.PersonDAO)" class="member-name-link">PersonController(PersonDAO)</a> - Constructor for class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PersonController</a></dt>
 <dd>
