--- a/java-docs/index-files/index-13.html
+++ b/java-docs/index-files/index-13.html
@@ -58,7 +58,7 @@ loadScripts(document, 'script');</script>
 <dl class="index">
 <dt><a href="../com/library/library_management/data/entities/Person.html#setAddress(java.lang.String)" class="member-name-link">setAddress(String)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Sets the address of the person.</div>
+<div class="block">Sets the address of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Publisher.html#setAddress(java.lang.String)" class="member-name-link">setAddress(String)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Publisher.html" title="class in com.library.library_management.data.entities">Publisher</a></dt>
 <dd>
@@ -90,7 +90,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#setBorrowings(java.util.List)" class="member-name-link">setBorrowings(List&lt;Borrowing&gt;)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Sets the list of borrowings associated with the person.</div>
+<div class="block">Sets the list of borrowings associated with the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Book.html#setCopies(java.util.List)" class="member-name-link">setCopies(List&lt;Copy&gt;)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Book.html" title="class in com.library.library_management.data.entities">Book</a></dt>
 <dd>
@@ -106,7 +106,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#setEmail(java.lang.String)" class="member-name-link">setEmail(String)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Sets the unique email address of the person.</div>
+<div class="block">Sets the unique email address of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Librarian.html#setEmploymentDate(java.time.LocalDate)" class="member-name-link">setEmploymentDate(LocalDate)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities">Librarian</a></dt>
 <dd>
@@ -130,7 +130,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#setId(java.lang.Integer)" class="member-name-link">setId(Integer)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Sets the unique identifier of the person.</div>
+<div class="block">Sets the unique identifier of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Publisher.html#setId(java.lang.Integer)" class="member-name-link">setId(Integer)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Publisher.html" title="class in com.library.library_management.data.entities">Publisher</a></dt>
 <dd>
@@ -142,11 +142,11 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#setLibrarian(com.library.library_management.data.entities.Librarian)" class="member-name-link">setLibrarian(Librarian)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Sets the librarian entity associated with the person.</div>
+<div class="block">Sets the librarian entity associated with the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#setName(java.lang.String)" class="member-name-link">setName(String)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Sets the name of the person.</div>
+<div class="block">Sets the name of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Publisher.html#setName(java.lang.String)" class="member-name-link">setName(String)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Publisher.html" title="class in com.library.library_management.data.entities">Publisher</a></dt>
 <dd>
@@ -154,7 +154,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Borrowing.html#setPerson(com.library.library_management.data.entities.Person)" class="member-name-link">setPerson(Person)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Borrowing.html" title="class in com.library.library_management.data.entities">Borrowing</a></dt>
 <dd>
-<div class="block">Sets the person who borrowed the copy.</div>
+<div class="block">Sets the user who borrowed the copy.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Librarian.html#setPerson(com.library.library_management.data.entities.Person)" class="member-name-link">setPerson(Person)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities">Librarian</a></dt>
 <dd>
@@ -166,7 +166,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#setPhoneNumber(java.lang.String)" class="member-name-link">setPhoneNumber(String)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Sets the phone number of the person.</div>
+<div class="block">Sets the phone number of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Librarian.html#setPosition(java.lang.String)" class="member-name-link">setPosition(String)</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities">Librarian</a></dt>
 <dd>
@@ -208,7 +208,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html#showAddForm(org.springframework.ui.Model)" class="member-name-link">showAddForm(Model)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PersonController</a></dt>
 <dd>
-<div class="block">Handles HTTP GET requests to display the form for adding a new person.</div>
+<div class="block">Handles HTTP GET requests to display the form for adding a new user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PublisherController.html#showAddForm(org.springframework.ui.Model)" class="member-name-link">showAddForm(Model)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PublisherController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PublisherController</a></dt>
 <dd>
@@ -242,7 +242,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html#showPersons(org.springframework.ui.Model)" class="member-name-link">showPersons(Model)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PersonController</a></dt>
 <dd>
-<div class="block">Handles HTTP GET requests to display the list of persons.</div>
+<div class="block">Handles HTTP GET requests to display the list of users.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PublisherController.html#showPublishers(org.springframework.ui.Model)" class="member-name-link">showPublishers(Model)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PublisherController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PublisherController</a></dt>
 <dd>
@@ -268,7 +268,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html#showUpdateForm(int,org.springframework.ui.Model)" class="member-name-link">showUpdateForm(int, Model)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PersonController</a></dt>
 <dd>
-<div class="block">Handles HTTP GET requests to display the form for updating a person's details.</div>
+<div class="block">Handles HTTP GET requests to display the form for updating a user's details.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PublisherController.html#showUpdateForm(int,org.springframework.ui.Model)" class="member-name-link">showUpdateForm(int, Model)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PublisherController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PublisherController</a></dt>
 <dd>
