--- a/java-docs/index-files/index-14.html
+++ b/java-docs/index-files/index-14.html
@@ -90,7 +90,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html#updateBook(com.library.library_management.data.entities.Person)" class="member-name-link">updateBook(Person)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PersonController</a></dt>
 <dd>
-<div class="block">Handles HTTP POST requests to update a person's details.</div>
+<div class="block">Handles HTTP POST requests to update a user's details.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/BorrowingController.html#updateBorrowing(com.library.library_management.data.entities.Borrowing)" class="member-name-link">updateBorrowing(Borrowing)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/BorrowingController.html" title="class in com.library.library_management.data.presentation.controllers.admin">BorrowingController</a></dt>
 <dd>
