--- a/java-docs/index-files/index-2.html
+++ b/java-docs/index-files/index-2.html
@@ -113,7 +113,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Borrowing.html#%3Cinit%3E(com.library.library_management.data.entities.Person,com.library.library_management.data.entities.Copy,java.time.LocalDate,java.time.LocalDate)" class="member-name-link">Borrowing(Person, Copy, LocalDate, LocalDate)</a> - Constructor for class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Borrowing.html" title="class in com.library.library_management.data.entities">Borrowing</a></dt>
 <dd>
-<div class="block">Constructs a new <a href="../com/library/library_management/data/entities/Borrowing.html" title="class in com.library.library_management.data.entities"><code>Borrowing</code></a> instance with the specified person, copy,
+<div class="block">Constructs a new <a href="../com/library/library_management/data/entities/Borrowing.html" title="class in com.library.library_management.data.entities"><code>Borrowing</code></a> instance with the specified user, copy,
  borrowing date, and return date.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/BorrowingController.html" class="type-name-link" title="class in com.library.library_management.data.presentation.controllers.admin">BorrowingController</a> - Class in <a href="../com/library/library_management/data/presentation/controllers/admin/package-summary.html">com.library.library_management.data.presentation.controllers.admin</a></dt>
