--- a/java-docs/index-files/index-4.html
+++ b/java-docs/index-files/index-4.html
@@ -95,7 +95,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html#deleteBook(int)" class="member-name-link">deleteBook(int)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/PersonController.html" title="class in com.library.library_management.data.presentation.controllers.admin">PersonController</a></dt>
 <dd>
-<div class="block">Handles HTTP POST requests to delete a person by their ID.</div>
+<div class="block">Handles HTTP POST requests to delete a user by their ID.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/BorrowingController.html#deleteBorrowing(int)" class="member-name-link">deleteBorrowing(int)</a> - Method in class com.library.library_management.data.presentation.controllers.admin.<a href="../com/library/library_management/data/presentation/controllers/admin/BorrowingController.html" title="class in com.library.library_management.data.presentation.controllers.admin">BorrowingController</a></dt>
 <dd>
