--- a/java-docs/index-files/index-7.html
+++ b/java-docs/index-files/index-7.html
@@ -58,7 +58,7 @@ loadScripts(document, 'script');</script>
 <dl class="index">
 <dt><a href="../com/library/library_management/data/entities/Person.html#getAddress()" class="member-name-link">getAddress()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Gets the address of the person.</div>
+<div class="block">Gets the address of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Publisher.html#getAddress()" class="member-name-link">getAddress()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Publisher.html" title="class in com.library.library_management.data.entities">Publisher</a></dt>
 <dd>
@@ -128,7 +128,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#getBorrowings()" class="member-name-link">getBorrowings()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Gets the list of borrowings associated with the person.</div>
+<div class="block">Gets the list of borrowings associated with the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/dao/PersonDAO.html#getByEmail(java.lang.String)" class="member-name-link">getByEmail(String)</a> - Method in class com.library.library_management.data.dao.<a href="../com/library/library_management/data/dao/PersonDAO.html" title="class in com.library.library_management.data.dao">PersonDAO</a></dt>
 <dd>
@@ -208,7 +208,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#getEmail()" class="member-name-link">getEmail()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Gets the unique email address of the person.</div>
+<div class="block">Gets the unique email address of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Librarian.html#getEmploymentDate()" class="member-name-link">getEmploymentDate()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities">Librarian</a></dt>
 <dd>
@@ -232,7 +232,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#getId()" class="member-name-link">getId()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Gets the unique identifier of the person.</div>
+<div class="block">Gets the unique identifier of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Publisher.html#getId()" class="member-name-link">getId()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Publisher.html" title="class in com.library.library_management.data.entities">Publisher</a></dt>
 <dd>
@@ -244,7 +244,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#getLibrarian()" class="member-name-link">getLibrarian()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Gets the librarian entity associated with the person, if applicable.</div>
+<div class="block">Gets the librarian entity associated with the user, if applicable.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/CopyStatus.html#getName()" class="member-name-link">getName()</a> - Method in enum class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/CopyStatus.html" title="enum class in com.library.library_management.data.entities">CopyStatus</a></dt>
 <dd>
@@ -252,7 +252,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#getName()" class="member-name-link">getName()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Gets the name of the person.</div>
+<div class="block">Gets the name of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Publisher.html#getName()" class="member-name-link">getName()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Publisher.html" title="class in com.library.library_management.data.entities">Publisher</a></dt>
 <dd>
@@ -264,7 +264,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Borrowing.html#getPerson()" class="member-name-link">getPerson()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Borrowing.html" title="class in com.library.library_management.data.entities">Borrowing</a></dt>
 <dd>
-<div class="block">Gets the person who borrowed the copy.</div>
+<div class="block">Gets the user who borrowed the copy.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Librarian.html#getPerson()" class="member-name-link">getPerson()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities">Librarian</a></dt>
 <dd>
@@ -276,7 +276,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Person.html#getPhoneNumber()" class="member-name-link">getPhoneNumber()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Person.html" title="class in com.library.library_management.data.entities">Person</a></dt>
 <dd>
-<div class="block">Gets the phone number of the person.</div>
+<div class="block">Gets the phone number of the user.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Librarian.html#getPosition()" class="member-name-link">getPosition()</a> - Method in class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities">Librarian</a></dt>
 <dd>
