--- a/java-docs/index-files/index-9.html
+++ b/java-docs/index-files/index-9.html
@@ -66,7 +66,7 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="../com/library/library_management/data/entities/Librarian.html#%3Cinit%3E(com.library.library_management.data.entities.Person,java.time.LocalDate,java.lang.String)" class="member-name-link">Librarian(Person, LocalDate, String)</a> - Constructor for class com.library.library_management.data.entities.<a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities">Librarian</a></dt>
 <dd>
-<div class="block">Constructs a new <a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities"><code>Librarian</code></a> with the specified person, employment date, and position.</div>
+<div class="block">Constructs a new <a href="../com/library/library_management/data/entities/Librarian.html" title="class in com.library.library_management.data.entities"><code>Librarian</code></a> with the specified user, employment date, and position.</div>
 </dd>
 <dt><a href="../com/library/library_management/data/presentation/controllers/admin/LibrarianController.html" class="type-name-link" title="class in com.library.library_management.data.presentation.controllers.admin">LibrarianController</a> - Class in <a href="../com/library/library_management/data/presentation/controllers/admin/package-summary.html">com.library.library_management.data.presentation.controllers.admin</a></dt>
 <dd>&nbsp;</dd>
